k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vyasa
  labels:
    name: vyasa
